チェックアウト機能実装

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,6 +9,7 @@ ja:
           has_many: "%{record}が存在しているので削除できません"
     models:
       product: 商品
+      order: 注文
     attributes:
       product:
         name: 商品名
@@ -18,6 +19,19 @@ ja:
         img: 商品画像
         created_at: 登録日時
         updated_at: 更新日時
+      order:
+        first_name: 名
+        last_name: 姓
+        user_name: ユーザー名
+        email: メールアドレス
+        zip: 郵便番号
+        address1: 都道府県
+        address2: 市区町村
+        address3: 番地、建物名等
+        name_on_card: カード名義
+        card_number: カード番号
+        expiration: 有効期限
+        cvv: セキュリティコード
   date:
     abbr_day_names:
       - 日
